cleaned main
